Np 47873/terms conditions (#385)
* https://sikt.atlassian.net/browse/NP-47841

* qa feedback

* pmd check - fix