@@ -9,6 +9,7 @@ import com.amazonaws.services.lambda.runtime.events.CognitoUserPoolPreTokenGener
 import no.unit.nva.customer.model.CustomerDto;
 import no.unit.nva.customer.service.CustomerService;
 import no.unit.nva.database.IdentityService;
+import no.unit.nva.database.TermsAndConditionsService;
 import no.unit.nva.useraccessservice.model.RoleDto;
 import no.unit.nva.useraccessservice.model.RoleName;
 import no.unit.nva.useraccessservice.model.UserDto;
@@ -33,6 +34,7 @@ import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.cognitoidentityprovider.CognitoIdentityProviderClient;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.AdminUpdateUserAttributesRequest;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.AttributeType;
+import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 
 import java.net.URI;
 import java.time.Instant;
@@ -52,6 +54,8 @@ import static no.unit.nva.cognito.CognitoClaims.ACCESS_RIGHTS_CLAIM;
 import static no.unit.nva.cognito.CognitoClaims.ALLOWED_CUSTOMERS_CLAIM;
 import static no.unit.nva.cognito.CognitoClaims.CLAIMS_TO_BE_SUPPRESSED_FROM_PUBLIC;
 import static no.unit.nva.cognito.CognitoClaims.CURRENT_CUSTOMER_CLAIM;
+import static no.unit.nva.cognito.CognitoClaims.CURRENT_TERMS;
+import static no.unit.nva.cognito.CognitoClaims.CUSTOMER_ACCEPTED_TERMS;
 import static no.unit.nva.cognito.CognitoClaims.ELEMENTS_DELIMITER;
 import static no.unit.nva.cognito.CognitoClaims.EMPTY_CLAIM;
 import static no.unit.nva.cognito.CognitoClaims.FIRST_NAME_CLAIM;
@@ -91,12 +95,14 @@ public class UserSelectionUponLoginHandler
     private final CognitoIdentityProviderClient cognitoClient;
     private final UserEntriesCreatorForPerson userCreator;
     private final PersonRegistry personRegistry;
+    private final TermsAndConditionsService termsService;
 
     @JacocoGenerated
     public UserSelectionUponLoginHandler() {
         this.cognitoClient = defaultCognitoClient();
         this.customerService = defaultCustomerService(DEFAULT_DYNAMO_CLIENT);
         this.userCreator = new UserEntriesCreatorForPerson(defaultIdentityService(DEFAULT_DYNAMO_CLIENT));
+        this.termsService = new TermsAndConditionsService(DEFAULT_DYNAMO_CLIENT);
         this.personRegistry = CristinPersonRegistry.defaultPersonRegistry();
     }
 
@@ -109,15 +115,18 @@ public class UserSelectionUponLoginHandler
             .build();
     }
 
-    public UserSelectionUponLoginHandler(CognitoIdentityProviderClient cognitoClient,
-                                         CustomerService customerService,
-                                         IdentityService identityService,
-                                         PersonRegistry personRegistry) {
+    public UserSelectionUponLoginHandler(
+        CognitoIdentityProviderClient cognitoClient,
+        CustomerService customerService,
+        IdentityService identityService,
+        PersonRegistry personRegistry,
+        DynamoDbClient dynamoDbClient) {
 
         this.cognitoClient = cognitoClient;
         this.customerService = customerService;
         this.personRegistry = personRegistry;
         this.userCreator = new UserEntriesCreatorForPerson(identityService);
+        this.termsService = new TermsAndConditionsService(dynamoDbClient);
     }
 
     private static NationalIdentityNumber extractNin(Map<String, String> userAttributes) {
@@ -137,9 +146,19 @@ public class UserSelectionUponLoginHandler
         return userAttributes.get(FEIDE_ID);
     }
 
+    private static void logIfDebug(String s, Instant start) {
+        if (LOGGER.isDebugEnabled()) {
+            LOGGER.debug(s, Instant.now().toEpochMilli() - start.toEpochMilli());
+        }
+    }
+
+    private static String stringOrNull(Object argument) {
+        return nonNull(argument) ? argument.toString() : null;
+    }
+
     @Override
-    public CognitoUserPoolPreTokenGenerationEvent handleRequest(CognitoUserPoolPreTokenGenerationEvent input,
-                                                                Context context) {
+    public CognitoUserPoolPreTokenGenerationEvent handleRequest(
+        CognitoUserPoolPreTokenGenerationEvent input, Context context) {
         try {
             return processInput(input);
         } catch (Exception e) {
@@ -164,10 +183,7 @@ public class UserSelectionUponLoginHandler
 
         var requestedPerson = personRegistry.fetchPersonByNin(nin);
 
-        if (LOGGER.isDebugEnabled()) {
-            LOGGER.debug("Got person details from registry in {} ms.",
-                Instant.now().toEpochMilli() - startFetchingPerson.toEpochMilli());
-        }
+        logIfDebug("Got person details from registry in {} ms.", startFetchingPerson);
 
         if (requestedPerson.isPresent()) {
             var impersonatedBy = getImpersonatedBy(impersonating, authenticationDetails);
@@ -179,16 +195,13 @@ public class UserSelectionUponLoginHandler
             injectAccessRightsToEventResponse(input, Collections.emptyList());
         }
 
-        if (LOGGER.isDebugEnabled()) {
-            LOGGER.debug("Leaving request handler having spent {} ms.",
-                Instant.now().toEpochMilli() - start.toEpochMilli());
-        }
+        logIfDebug("Leaving request handler having spent {} ms.", start);
 
         return input;
     }
 
-    private NationalIdentityNumber getCurrentNin(String impersonating,
-                                                 AuthenticationDetails authenticationDetails) {
+    private NationalIdentityNumber getCurrentNin(
+        String impersonating, AuthenticationDetails authenticationDetails) {
 
         if (isNull(impersonating)) {
             return authenticationDetails.getNin();
@@ -224,57 +237,59 @@ public class UserSelectionUponLoginHandler
         return isNull(impersonating) ? null : authenticationDetails.getUsername();
     }
 
-    private List<String> createUsersAndUpdateCognitoBasedOnPersonRegistry(Person person,
-                                                                          AuthenticationDetails authenticationDetails,
-                                                                          String impersonatedBy) {
+    private List<String> createUsersAndUpdateCognitoBasedOnPersonRegistry(
+        Person person,
+        AuthenticationDetails authenticationDetails,
+        String impersonatedBy) {
+
         var start = Instant.now();
         var customersForPerson = fetchCustomersWithActiveAffiliations(person);
-        var usersForPerson = createUsers(person, customersForPerson, authenticationDetails);
+        var userSelectArguments = new UserSelectArguments.Builder()
+            .withAuthenticationDetails(authenticationDetails)
+            .withPerson(person)
+            .withCustomers(customersForPerson)
+            .withImpersonatedBy(impersonatedBy)
+            .withUsers(createUsers(person, customersForPerson, authenticationDetails))
+            .withCurrentTerms(termsService
+                .getCurrentTermsAndConditions()
+                .termsConditionsUri())
+            .withAcceptedTerms(termsService
+                .getTermsAndConditionsByPerson(person.getId())
+                .termsConditionsUri())
+            .build();
 
-        if (LOGGER.isDebugEnabled()) {
-            LOGGER.debug("Created users for customer with active affiliations in {} ms.",
-                Instant.now().toEpochMilli() - start.toEpochMilli());
-        }
+        logIfDebug("Created users for customer with active affiliations in {} ms.", start);
 
         start = Instant.now();
-        var accessRights = updateUserAttributesInCognito(person,
-            customersForPerson,
-            usersForPerson,
-            authenticationDetails,
-            impersonatedBy);
-        if (LOGGER.isDebugEnabled()) {
-            LOGGER.debug("Updated user attributes in Cognito in {} ms.",
-                Instant.now().toEpochMilli() - start.toEpochMilli());
-        }
+        var accessRights = updateUserAttributesInCognito(userSelectArguments);
+
+        logIfDebug("Updated user attributes in Cognito in {} ms.", start);
 
         return accessRights;
     }
 
-    private List<String> updateUserAttributesInCognito(Person person,
-                                                       Set<CustomerDto> customers,
-                                                       List<UserDto> users,
-                                                       AuthenticationDetails authenticationDetails,
-                                                       String impersonatedBy) {
-
+    private List<String> updateUserAttributesInCognito(UserSelectArguments arguments) {
         var currentCustomer
             = returnCurrentCustomerIfDefinedByFeideLoginOrPersonIsAffiliatedToExactlyOneCustomer(
-            authenticationDetails.getFeideDomain(), customers);
+            arguments.authenticationDetails().getFeideDomain(), arguments.customers());
         var currentUser = nonNull(currentCustomer)
-            ? getCurrentUser(currentCustomer, users)
+            ? getCurrentUser(currentCustomer, arguments.users())
             : null;
-        var rolesPerCustomerForPerson = rolesForCustomer(users, currentCustomer);
+        var rolesPerCustomerForPerson = rolesForCustomer(arguments.users(), currentCustomer);
 
-        var accessRights = createAccessRightsWithCustomerForCurrentCustomer(users, customers, currentCustomer);
-        var accessRightsWithoutCustomer = createAccessRightsForCurrentCustomer(users, customers, currentCustomer);
+        var accessRights =
+            createAccessRightsWithCustomerForCurrentCustomer(arguments.users(), arguments.customers(), currentCustomer);
+        var accessRightsWithoutCustomer =
+            createAccessRightsForCurrentCustomer(arguments.users(), arguments.customers(), currentCustomer);
 
-        updateCognitoUserAttributes(authenticationDetails,
-            person,
-            currentCustomer,
-            currentUser,
-            customers,
-            accessRightsWithoutCustomer,
-            rolesPerCustomerForPerson,
-            impersonatedBy);
+        updateCognitoUserAttributes(
+            arguments.copy()
+                .withCurrentCustomer(currentCustomer)
+                .withCurrentUser(currentUser)
+                .withRoles(rolesPerCustomerForPerson)
+                .withAccessRights(accessRightsWithoutCustomer)
+                .build()
+        );
 
         return accessRights;
     }
@@ -282,9 +297,11 @@ public class UserSelectionUponLoginHandler
     private List<UserDto> createUsers(Person person,
                                       Set<CustomerDto> customers,
                                       AuthenticationDetails authenticationDetails) {
-        var userCreationContext = new UserCreationContext(person,
+        var userCreationContext = new UserCreationContext(
+            person,
             customers,
-            authenticationDetails.getFeideIdentifier());
+            authenticationDetails.getFeideIdentifier()
+        );
 
         return userCreator.createUsers(userCreationContext);
     }
@@ -377,97 +394,53 @@ public class UserSelectionUponLoginHandler
             .map(UserDto::getRoles)
             .flatMap(Collection::stream)
             .map(RoleDto::getRoleName)
-            .collect(Collectors.toSet());
+            .collect(Collectors.toUnmodifiableSet());
     }
 
-    private void updateCognitoUserAttributes(
-        AuthenticationDetails authenticationDetails,
-        Person person,
-        CustomerDto currentCustomer,
-        UserDto currentUser,
-        Set<CustomerDto> customers,
-        Collection<String> accessRights,
-        Collection<RoleName> roles,
-        String impersonatedBy) {
-
-        final var updateUserAttributesRequest = createUpdateUserAttributesRequest(
-            authenticationDetails,
-            person,
-            currentCustomer,
-            currentUser,
-            customers,
-            accessRights,
-            roles,
-            impersonatedBy);
-
+    private void updateCognitoUserAttributes(UserSelectArguments arguments) {
+        final var updateUserAttributesRequest =
+            createUpdateUserAttributesRequest(arguments);
         cognitoClient.adminUpdateUserAttributes(updateUserAttributesRequest);
     }
 
-    private AdminUpdateUserAttributesRequest createUpdateUserAttributesRequest(
-        AuthenticationDetails authenticationDetails,
-        Person person,
-        CustomerDto currentCustomer,
-        UserDto currentUser,
-        Set<CustomerDto> customers,
-        Collection<String> accessRights,
-        Collection<RoleName> roles,
-        String impersonatedBy) {
-
-        Collection<AttributeType> userAttributes = updatedPersonAttributes(person,
-            authenticationDetails.getFeideDomain(),
-            currentCustomer,
-            currentUser,
-            customers,
-            accessRights,
-            roles,
-            impersonatedBy);
+    private AdminUpdateUserAttributesRequest createUpdateUserAttributesRequest(UserSelectArguments arguments) {
 
         return AdminUpdateUserAttributesRequest.builder()
-            .userPoolId(authenticationDetails.getUserPoolId())
-            .username(authenticationDetails.getUsername())
-            .userAttributes(userAttributes)
+            .userPoolId(arguments.authenticationDetails().getUserPoolId())
+            .username(arguments.authenticationDetails().getUsername())
+            .userAttributes(updatedPersonAttributes(arguments))
             .build();
     }
 
-    private Collection<AttributeType> updatedPersonAttributes(Person person,
-                                                              String feideDomain,
-                                                              CustomerDto currentCustomer,
-                                                              UserDto currentUser,
-                                                              Set<CustomerDto> customers,
-                                                              Collection<String> accessRights,
-                                                              Collection<RoleName> roles,
-                                                              String impersonatedBy) {
+    private Collection<AttributeType> updatedPersonAttributes(UserSelectArguments arguments) {
+        var allowedCustomersString = createAllowedCustomersString(
+            arguments.customers(),
+            arguments.authenticationDetails().getFeideDomain()
+        );
 
-        var allowedCustomersString = createAllowedCustomersString(customers, feideDomain);
-
-        return addClaimsForPeopleRegisteredInPersonRegistry(person,
-            currentCustomer,
-            currentUser,
-            accessRights,
-            roles,
-            allowedCustomersString,
-            impersonatedBy);
+        return addClaimsForPeopleRegisteredInPersonRegistry(arguments
+            .copy()
+            .withAllowedCustomersString(allowedCustomersString)
+            .build()
+        );
     }
 
-    private List<AttributeType> addClaimsForPeopleRegisteredInPersonRegistry(
-        Person person,
-        CustomerDto currentCustomer,
-        UserDto currentUser,
-        Collection<String> accessRights,
-        Collection<RoleName> roles,
-        String allowedCustomersString,
-        String impersonatedBy) {
+    private List<AttributeType> addClaimsForPeopleRegisteredInPersonRegistry(UserSelectArguments arguments) {
 
         var claims = new ArrayList<AttributeType>();
-        claims.add(createAttribute(FIRST_NAME_CLAIM, person.getFirstname()));
-        claims.add(createAttribute(LAST_NAME_CLAIM, person.getSurname()));
-        claims.add(createAttribute(ACCESS_RIGHTS_CLAIM, String.join(ELEMENTS_DELIMITER, accessRights)));
+        claims.add(createAttribute(FIRST_NAME_CLAIM, arguments.person().getFirstname()));
+        claims.add(createAttribute(LAST_NAME_CLAIM, arguments.person().getSurname()));
+        claims.add(createAttribute(ACCESS_RIGHTS_CLAIM, String.join(ELEMENTS_DELIMITER, arguments.accessRights())));
         claims.add(createAttribute(ROLES_CLAIM,
-            String.join(ELEMENTS_DELIMITER, roles.stream().map(RoleName::getValue).toList())));
-        claims.add(createAttribute(ALLOWED_CUSTOMERS_CLAIM, allowedCustomersString));
-        claims.add(createAttribute(PERSON_CRISTIN_ID_CLAIM, person.getId().toString()));
-        claims.add(createAttribute(IMPERSONATED_BY_CLAIM, isNull(impersonatedBy) ? "" : impersonatedBy));
-        addCustomerSelectionClaimsWhenUserHasOnePossibleLoginOrLoggedInWithFeide(currentCustomer, currentUser, claims);
+            String.join(ELEMENTS_DELIMITER, arguments.roles().stream().map(RoleName::getValue).toList())));
+        claims.add(createAttribute(ALLOWED_CUSTOMERS_CLAIM, arguments.allowedCustomersString()));
+        claims.add(createAttribute(PERSON_CRISTIN_ID_CLAIM, arguments.person().getId().toString()));
+        claims.add(createAttribute(IMPERSONATED_BY_CLAIM,
+            isNull(arguments.impersonatedBy()) ? "" : arguments.impersonatedBy()));
+        claims.add(createAttribute(CURRENT_TERMS, stringOrNull(arguments.currentTerms())));
+        claims.add(createAttribute(CUSTOMER_ACCEPTED_TERMS, stringOrNull(arguments.acceptedTerms())));
+        addCustomerSelectionClaimsWhenUserHasOnePossibleLoginOrLoggedInWithFeide(arguments.currentCustomer(),
+            arguments.currentUser(), claims);
         return claims;
     }
 
@@ -509,10 +482,11 @@ public class UserSelectionUponLoginHandler
             currentUser.getAffiliation().toString());
     }
 
-    private List<AttributeType> generateCustomerSelectionClaims(String customerId,
-                                                                String topOrgCristinId,
-                                                                String username,
-                                                                String personAffiliation) {
+    private List<AttributeType> generateCustomerSelectionClaims(
+        String customerId,
+        String topOrgCristinId,
+        String username,
+        String personAffiliation) {
 
         var currentCustomerClaim = createAttribute(CURRENT_CUSTOMER_CLAIM, customerId);
         var currentTopLevelOrgClaim = createAttribute(TOP_ORG_CRISTIN_ID, topOrgCristinId);
@@ -544,16 +518,17 @@ public class UserSelectionUponLoginHandler
         return AttributeType.builder().name(name).value(value).build();
     }
 
-    private void injectAccessRightsToEventResponse(CognitoUserPoolPreTokenGenerationEvent input,
-                                                   List<String> accessRights) {
+    private void injectAccessRightsToEventResponse(
+        CognitoUserPoolPreTokenGenerationEvent input, List<String> accessRights) {
         input.setResponse(Response.builder()
             .withClaimsOverrideDetails(buildOverrideClaims(accessRights))
             .build());
     }
 
-    private List<UserAccessRightForCustomer> createAccessRightForCustomer(List<UserDto> personUsers,
-                                                                          Set<CustomerDto> customers,
-                                                                          CustomerDto currentCustomer) {
+    private List<UserAccessRightForCustomer> createAccessRightForCustomer(
+        List<UserDto> personUsers,
+        Set<CustomerDto> customers,
+        CustomerDto currentCustomer) {
         return personUsers.stream()
             .map(user -> UserAccessRightForCustomer.fromUser(user, customers))
             .flatMap(Collection::stream)
@@ -561,22 +536,25 @@ public class UserSelectionUponLoginHandler
             .toList();
     }
 
-    private List<String> createAccessRightsWithCustomerForCurrentCustomer(List<UserDto> personUsers,
-                                                                          Set<CustomerDto> customers,
-                                                                          CustomerDto currentCustomer) {
+    private List<String> createAccessRightsWithCustomerForCurrentCustomer(
+        List<UserDto> personUsers,
+        Set<CustomerDto> customers,
+        CustomerDto currentCustomer) {
         return createAccessRightForCustomer(personUsers, customers, currentCustomer)
             .stream()
             .map(UserAccessRightForCustomer::toString)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    private List<String> createAccessRightsForCurrentCustomer(List<UserDto> personUsers, Set<CustomerDto> customers,
-                                                              CustomerDto currentCustomer) {
+    private List<String> createAccessRightsForCurrentCustomer(
+        List<UserDto> personUsers,
+        Set<CustomerDto> customers,
+        CustomerDto currentCustomer) {
         return createAccessRightForCustomer(personUsers, customers, currentCustomer)
             .stream()
             .map(UserAccessRightForCustomer::getAccessRight)
             .map(AccessRight::toPersistedString)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private ClaimsOverrideDetails buildOverrideClaims(List<String> groupsToOverride) {
